SAK-8962 bugs identified by findbugs plugin
git-svn-id: https://source.sakaiproject.org/svn/polls/trunk@57669 66ffb92e-73f9-0310-93c1-f5514f145a0a